# FCE-Bot

./: .gitignore  Dockerfile  FCE_bot.py  FCE_services.py  README.md  ShoShoBot_env.yaml  app_secret.txt  config.json  docker-compose.yaml  hello.py  launch.sh  logo.txt  pyproject.toml  requirements.txt  test_auth.json
.github/workflows/: test.yml
data/: FCE_data.csv  parse_data.py
database/: FCE_raw.csv  create.sql  initialize.sql  parse_data.py
docs/: poetry-instructions.md  server-setup.md  server_setup.md  testing.md
fce_bot/: main.py
fce_bot/canvas_reminder/: canvas_reminder.py  canvas_scraper.py
fce_bot/db/: create_canvas_reminder_users_collection.py  create_query_records_collection.py  fce_data_transform.py  init_db.py
fce_bot/text_reply/: canvas_scraper.py  dining_scraper.py  main.py  text_message_replier.py
old_code/: FCE_bot.py  FCE_services.py  hello.py
tests/: test_canvas_reminder.py  test_canvas_scraper.py  test_configs.py  test_query_records.py  test_test_reply.py  test_text_reply.py
